@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[71] --> Fix Priest: Shadowform.
 [70] --> Fixed [Item] Wrathful Gladiator's Dreadplate Gauntlets.
 [69] --> Add Npc Top 10 Arena Teams.
 [68] --> Alternate script Gunship by fiveofeight.
